# jwt-webserver

./: Cargo.toml  justfile
docs/examples/: requests.txt
migrations/2023-04-05-180808_create_products/: down.sql  up.sql
migrations/2023-04-11-093406_create_customers/: down.sql  up.sql
migrations/2023-04-11-093411_create_orders/: down.sql  up.sql
migrations/2023-04-11-093451_create_products_in_orders/: down.sql  up.sql
src/: app.rs  db_actions.rs  lib.rs  main.rs  models.rs  repositories.rs  schema.rs  setup.rs
src/controllers/: customer_controller.rs  mod.rs  order_controller.rs  product_controller.rs  user_controller.rs
src/models/: mod.rs  product.rs  token.rs
src/repositories/: customer_repo.rs  models.rs  order_repo.rs  product_repo.rs
src/repositories/models/: customer.rs  order.rs
src/services/: customer_service.rs  mod.rs  order_service.rs  product_service.rs
tests/: dev.rs
